# python-package-template

./: .coveragerc  .pre-commit-config.yaml  Pipfile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
mypackage/: __init__.py
requirements/: requirements-dev.txt  requirements-docs.txt
