[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "<PROJECT_NAME>"
authors = [
    {name = "Lucino772", email = "lucapalmi772@gmail.com"},
]
# keywords = []
description = "<PROJECT_DESCRIPTION>"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
# dependencies = []

[project.urls]
Homepage = "https://github.com/Lucino772/<PROJECT_NAME>"
Changelog = "https://github.com/Lucino772/<PROJECT_NAME>/blob/main/CHANGELOG.rst"

[tool.setuptools]
packages = ["<PACKAGE>"]

[tool.setuptools_scm]
write_to = "<PACKAGE>/_version.py"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | docs
)/
'''

[tool.towncrier]
name = "<PROJECT_NAME>"
directory = "changes"
package = "<PACKAGE>"
filename = "CHANGELOG.rst"
title_format = "{name} v{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/Lucino772/<PROJECT_NAME>/issues/{issue}>`_"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./ --cov-report=xml ./tests"
