[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "python-package-template" # Replace with project name
authors = [
    {name = "Lucino772", email = "lucapalmi772@gmail.com"},
]
# keywords = []
# description = ""
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]
# dependencies = []

[project.urls]
Homepage = "https://github.com/Lucino772/python-package-template" # Replace with project name
Changelog = "https://github.com/Lucino772/python-package-template/blob/main/CHANGELOG.rst" # Replace with project name

[tool.setuptools]
packages = ["mypackage"]

[tool.setuptools_scm]
write_to = "mypackage/_version.py"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | docs
)/
'''

[tool.towncrier]
name = "python-package-template"
directory = "changes"
package = "mypackage"
filename = "CHANGELOG.rst"
title_format = "{name} v{version} ({project_date})"
issue_format = "`#{issue} <https://github.com/Lucino772/python-package-template/issues/{issue}>`_"

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov=./ --cov-report=xml ./tests"
